@@ -2,6 +2,7 @@
 extern void free_all_anim(void);
 extern void init_anim(void);
 extern int find_animation(const char *name);
+extern int try_find_animation(const char* name);
 extern void animate_object(object *op, int dir);
 extern void apply_anim_suffix(object* who, sstring suffix);
 /* arch.c */
